# FEURcraft

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
FEURcraft/: CMakeLists.txt
FEURcraft/graphic/: CMakeLists.txt
FEURcraft/graphic/include/: camera.h  geometry.h  mesh.h  shader.h  shader_program.h  shader_type.h  vertex.h
FEURcraft/graphic/private/: gl_debug.h  vertex_layout.h
FEURcraft/graphic/src/: camera.c  geometry.c  mesh.c  renderer.c  shader.c  shader_program.c  shader_type.c  vertex_layout.c
FEURcraft/math/: CMakeLists.txt
FEURcraft/math/include/: mat4.h  vec2.h  vec3.h  vec4.h  vector.h
FEURcraft/math/src/: mat4.c  vec2.c  vec3.c  vec4.c  vector.c
FEURcraft/renderer/: CMakeLists.txt
FEURcraft/renderer/include/: camera.h  mesh.h  vertex.h
FEURcraft/renderer/private/: shader.h  vertex_layout.h
FEURcraft/renderer/src/: mesh.c  vertex_layout.c
FEURcraft/system/: CMakeLists.txt
FEURcraft/system/include/: env_helper.h  window.h
FEURcraft/system/src/: env_helper.c  read_file.c  window.c
FEURcraft/utils/: CMakeLists.txt
FEURcraft/utils/include/: ansi_colors.h  c_str_helper.h  debug.h  error_checker.h  logger.h  ptr_helper.h  read_file.h
FEURcraft/utils/src/: c_str_helper.c
assets/shader/: default.frag  default.vert
examples/: CMakeLists.txt
examples/src/: simple_draw.c
tests/: CMakeLists.txt  run.sh
tests/src/: create_window.c  mat4.c  shader.c  template.c  vec2.c  vec3.c  vec4.c
tests/src/FEUR_Test/: FEUR_Test.h  test_assert.h  test_data.h  test_logger.h  tester.h
